--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
   </head>
   <body>
 
-    <h1>My First Website</h1>
-    <p>My first paragraph.</p>
-    <p>My second paragraph</p>
+    <h1>Mozilla is cool</h1>
+    <img src="images/firefox-icon.png" alt="mozilla icon">
+    <p>At Mozilla we're a global community of</p>
+    <ul>
+      <li>technologists</li>
+      <li>thinkers</li>
+      <li>builders</li>
+    </ul>
+    <p>Working together to keep the internet alive and accesible, so people worldwide can be informed contributers and creaters of the web. We believe this act of human collaboration accross of an open platform is essential to individual growth and our collective future.</p>
+    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the parsuit of our mission</p>
 
   </body>
 </html>
