--- a/index.html
+++ b/index.html
@@ -1,20 +1,75 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Page Title</title>
-  </head>
-  <body>
+    <head>
+        <title>omar's portfolio</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        
+    <header>
 
-    <h1>Mozilla is cool</h1>
-    <img src="images/firefox-icon.png" alt="mozilla icon">
-    <p>At Mozilla we're a global community of</p>
-    <ul>
-      <li>technologists</li>
-      <li>thinkers</li>
-      <li>builders</li>
-    </ul>
-    <p>Working together to keep the internet alive and accesible, so people worldwide can be informed contributers and creaters of the web. We believe this act of human collaboration accross of an open platform is essential to individual growth and our collective future.</p>
-    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the parsuit of our mission</p>
+        <img src="mypic.jpg" alt="picture of omar ahmed osman">
 
-  </body>
+        <nav>
+
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+
+    </header>
+
+    <main>
+
+        <section id="hero">
+            <div class="section-inner">
+                <img src="mypic1.jpg" alt="picture of omar ahmed osman" class="profile-img">
+                <h1>Hi! I am Omar Ahmed Osman</h1>
+            </div>
+        </section>
+
+        <section id="about">
+            <div class="section-inner">
+                <h2>About Me</h2>
+                <p>I am student of front-end web development. I am passionate to study more about web developement. I recently started studying front-end at 
+                    codersRank and i am enjoying this course.
+                </p>
+                <p>I am thankful to the Almighty Allah that has guided through my life and made to choose this fruitful field. I am very greatful to my Mum and Dud and my big brother that have 
+                    supported me through my studies and have always given me the best they can.
+                </p>
+                <p>
+                    I appriciate the help and courage that i got from my university and my classmates. I am so thankful to Allah that he has given such a wonderful 
+                    teachers who have guided through my project developement.
+                </p>
+
+                <h3>Achievements</h3>
+                <ul>
+                    <li>Bachlor degree in computer science</li>
+                    <li>Certificate in python programming</li>
+                    <li>Certificate in machine learing with python</li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="contact">
+            <div class="section-inner">
+                <h2>Contact me</h2>
+                <p>You can find me on</p>
+                <ul>
+                    <li><a href="https://www.facebook.com/harithbinuahmed">facebook</a></li>
+                </ul>
+                <p>Or you can <a href="milto:marahosab114@gmil.com"> send me an email</a>.</p>
+            </div>
+        </section>
+
+    </main>
+
+    <footer>
+            © Copyright Omar 2019.
+    </footer>
+
+    </body>
+
 </html>
